<resources>
    <string name="app_name">LiteDS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LiteDS</string>
    <string name="nav_header_subtitle">Making communication with your robot easy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gamepad">GamePad</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_console">Console</string>
    <string name="menu_send">Send</string>

    <string name="main_team">Team: </string>
    <string name="main_robot">Robot: </string>
    <string name="main_com">COM: </string>
    <string name="main_joystick">Joystick: </string>
    <string name="main_timer">Elapsed Time: </string>
    <string name="main_battery">Robot Voltage: </string>
    <string name="main_enable">Enable</string>
    <string name="main_disable">Disable</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="protocol_header">Protocol Configuration</string>
    <string name="sync_header">Sync</string>

    <string name="team_title">Team Number</string>
    <string name="protocol_title">Select Protocol</string>
    <string name="ip_title">Manual TCP/IP Configuration</string>
    <string name="manualip_title">IP or Domain</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="credits">Created by Manuel Díaz\nfrom WinT 3794</string>
    <string name="copyright">Copyright © 2020. All rights reserved.\nUnder MIT License.</string>
    <string name="spinnerContextMenuTitle">Operation Modes:</string>
    <string name="teamMenuTitle">Team Data:</string>
    <string name="connectionMenuTitle">Connection Status:</string>
    <string name="executionMenuTitle">Execution Data:</string>
</resources>

