<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/protocol_header">

        <EditTextPreference
            android:id="@+id/teamNumber"
            android:inputType="numberPassword"
            app:key="team"
            app:title="@string/team_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="false"
            android:entries="@array/protocol"
            android:entryValues="@array/protocol_values"
            app:key="protocol"
            app:title="@string/protocol_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="manual_switch"
            android:title="@string/ip_title" />
        <EditTextPreference
            app:dependency="manual_switch"
            android:key="manual_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/manualip_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
