<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_gamepad"
            android:icon="@mipmap/ic_videogame_asset_black"
            android:title="@string/menu_gamepad" />
        <item
            android:id="@+id/nav_console"
            android:icon="@mipmap/ic_web_asset_black"
            android:title="@string/menu_console" />
    </group>

</menu>
